tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done ((TIME)).
Loading additional-files from 'input_additional.add.xml' ... done ((TIME)).
Loading additional-files from 'input_additional2.add.xml' ... done ((TIME)).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation started with time: 0.00.
Simulation ended at time: 500.00.
Reason: The final simulation step has been reached.
Performance:
Vehicles:
 Inserted: 422 (Loaded: 423)
 Running: 88
 Waiting: 1
Statistics (avg of 334):
 RouteLength: 351.73
 Speed: 7.60
 Duration: 64.43
 WaitingTime: 28.18
 TimeLoss: 45.87
 DepartDelay: 0.68
